<resources>
    <string name="app_name">中山一院CBS</string>
    <string name="save">保存</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_real_name">请输入真实姓名 (注册后不可修改)</string>
    <string name="not_mobile_format">手机号码格式不正确</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_error">验证码不正确</string>
    <string name="input_password_count">请输入6-18位密码</string>
    <string name="password_inconformity">两次密码输入不一致</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="developing">开发中</string>
    <string name="send_code_succeed">验证码发送成功</string>
    <string name="agree_protocol"><![CDATA[点击注册即表示同意 <font color="#ff2456">《%s》</font>]]></string>
    <string name="performance"><![CDATA[成绩：<font color="#ff2456">%s</font>]]></string>
    <string name="home">首页</string>
    <string name="class_schedule">课程表</string>
    <string name="ke_cheng">课程</string>
    <string name="zi_xun">资讯</string>
    <string name="jiao_cheng">教程</string>
    <string name="jiao_shi">教师</string>
    <string name="xiao_xi">消息</string>
    <string name="kao_shi">考试</string>
    <string name="mine">我的</string>
    <string name="name">李菲菲</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="my_checking_in">我的考勤</string>
    <string name="checking_in">考勤</string>
    <string name="tutorial_courseware">教程课件</string>
    <string name="my_courseware">我的课件</string>
    <string name="checking_in_manage">考勤管理</string>
    <string name="my_note">我的笔记</string>
    <string name="my_examination">我的考试</string>
    <string name="uploading_note">上传笔记</string>
    <string name="uploading_courseware">上传课件</string>
    <string name="publish_note">发笔记</string>
    <string name="publish_courseware">发课件</string>
    <string name="publish">发布</string>
    <string name="my_class_schedule">我的课程表</string>
    <string name="class_details">课程详情</string>
    <string name="class_hour_evaluate">课时评价</string>
    <string name="teacher_evaluate">老师评价</string>
    <string name="schoolmate_evaluate">同学评价</string>
    <string name="enter_into_examination">进入考试</string>
    <string name="examination_num">%1$s/%2$s</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="input_comment">请输入评论内容</string>
    <string name="time">2018-8-25 12:33:55</string>
    <string name="news_details">资讯详情</string>
    <string name="notice">公告通知</string>
    <string name="check_details">查看详情</string>
    <string name="news">资讯</string>
    <string name="filtrate">筛选</string>
    <string name="teacher">教师</string>
    <string name="submit">提交</string>
    <string name="input_evaluate_content">请输入评价内容</string>
    <string name="evaluate">评价</string>
    <string name="num_120">%1$s/120</string>
    <string name="num_person">%1$s人</string>
    <string name="num_question">%1$s题</string>
    <string name="start_and_time">%1$s -- %2$s</string>
    <string name="questionnaire">问卷</string>
    <string name="check_questionnaire">调查问卷</string>
    <string name="examination_result">考试结果</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_address">请输入详细地址</string>
    <string name="individuality_portrait">个性头像：</string>
    <string name="personal_data">个人资料</string>
    <string name="select_students">选择考试学生</string>
    <string name="select_all">全选</string>
    <string name="invert_all">反选</string>
    <string name="select_all_no">全不选</string>
    <string name="invert_all_no">取消反选</string>
    <string name="first_select_students">请先选择学生</string>
    <string name="my_evaluate">我的评价</string>
    <string name="questionnaire_management">问卷调查管理</string>
    <string name="add_questionnaire">添加问卷</string>
    <string name="add_questionnaire_option">添加问卷选项</string>
    <string name="add_option">添加选项</string>
    <string name="add">添加</string>
    <string name="examination_management">考试管理</string>
    <string name="add_examination">添加考试</string>
    <string name="examination_details">考试详情</string>
    <string name="add_questionnaire_subject">添加问卷题目</string>
    <string name="course_list">课时列表</string>
    <string name="my_class_hour">我的课时</string>
    <string name="add_class">添加课时</string>
    <string name="input_questionnaire_option">请输入问卷标题</string>
    <string name="exam_topics">选择考试题目</string>
    <string name="setting">设置</string>
    <string name="publish_course">发布教程</string>
    <string name="zero">0</string>
    <string name="search_course">搜索教程</string>
    <string name="search_courseware">搜索课件</string>
    <string name="input_courseware_title">请输入课件标题</string>
    <string name="input_note_title">请输入笔记标题</string>
    <string name="input_note_content">请输入笔记内容</string>
    <string name="input_courseware_content">请输入课件内容</string>
    <string name="please_select_picture">请选择图片</string>
    <string name="note_details">笔记详情</string>
    <string name="courseware_details">课件详情</string>
    <string name="check">查看</string>
    <string name="enclosure_details">附件详情</string>
    <string name="input_video_title">请输入视频标题</string>
    <string name="change_phone_code">验证码以短息方式发送至您的手机，请在60s内输入验证码！</string>
    <string name="publish_class_hour">发布课时</string>
    <string name="class_select">选择班级</string>
    <string name="remark">备注</string>
    <string name="input_remark">请输入备注</string>
    <string name="not_check">未审核</string>
    <string name="checked">已审核</string>
    <string name="add_check_in">添加考勤</string>
    <string name="anonymity_student">匿名学生</string>
    <string name="anonymity_classroom">匿名教室</string>
    <string name="input_title">请输入标题</string>
    <string name="input_teaching_methods">请输入教学方式</string>
    <string name="add_course">添加教程</string>
    <string name="my_course">我的教程</string>
    <string name="year_month">%1$s年%2$s月</string>
    <string name="grade">%1$s分</string>
    <string name="teacher_remark">老师评语：\n\u3000\u3000%1$s</string>
    <string name="user_evaluation">用户评价：</string>
    <string name="teaching_age">%1$s年教龄</string>
    <string name="teacher_info">%1$s | %2$s岁 | %3$s</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="all">全部</string>
    <string name="ta_publish">TA的发布(%1$s)</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="all_pause">全部暂停</string>
    <string name="all_cancel">全部取消</string>
    <string name="all_delete">全部删除</string>
    <string name="pause">暂停</string>
    <string name="all_pitch_on">全部选中</string>
    <string name="upload_video">上传视频</string>
    <string name="uploading">正在上传</string>
    <string name="uploading_succeed">上传成功</string>
    <string name="uploading_failure">上传失败</string>
    <string name="waiting">等待中</string>
    <string name="selection_sort">请选择分类</string>
    <string name="in_attendance">考勤中...</string>
    <string name="delete_note">确认要删除该笔记？</string>
    <string name="delete_courseware">确认要删除该课件？</string>
    <string name="user_protocol">用户协议</string>
    <string name="in_maintenance">在维修</string>
    <string name="in_use">使用中</string>
    <string name="unused">未使用</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="days_ago">天前</string>
    <string name="months_ago">个月前</string>
    <string name="years_ago">年前</string>
    <string name="format_all_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_time_no_second">yyyy-MM-dd HH:mm</string>
    <string name="format_time_year_month_day">yyyy-MM-dd</string>
    <string name="format_time_year_month">yyyy-MM</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="choose_students">请选择学生</string>
    <string name="choose_subjects">请选择题目</string>
    <string name="answer_sub">答</string>
    <string name="not_started">未开始</string>
    <string name="in_progress">正在进行</string>
    <string name="finished">已结束</string>
    <string name="submitted">已提交</string>
    <string name="unreviewed">未审核</string>
    <string name="submit_num">%1$s人/%2$s人</string>
    <string name="topic_title">%1$s、%2$s(%3$s)</string>
    <string name="topic_title1">%1$s、%2$s</string>
    <string name="i_know">我知道了</string>
    <string name="underway">进行中</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="next_topic">下一题</string>
    <string name="on_topic">上一题</string>
    <string name="quiz">随堂测试</string>
    <string name="comprehensive_examination">综合考试</string>
    <string name="multiple_choice">多选</string>
    <string name="single_choice">单选</string>
    <string name="achievements">查看成绩</string>
    <string name="total_points">/%1$s</string>
    <string name="number1">试题量\n%1$s道</string>
    <string name="number2">答题数\n%1$s道</string>
    <string name="accuracy">正确率\n%1$s</string>
    <string name="number3">共%1$s道   您答对了%2$s道</string>
    <string name="administrators">管理员</string>
    <string name="members_group">群成员</string>
    <string name="my_test_paper">考试管理</string>
    <string name="private_letter">私信</string>
    <string name="test_student">学员：%1$s</string>
    <string name="test_time">考试时间：%1$s分钟</string>
    <string name="test_evaluate_name">评估人员：%1$s</string>
    <string name="score_range">最高%1$s分，最低%2$s分</string>
    <string name="score">%1$s分</string>
    <string name="count_down">倒计时：%1$s</string>
    <string name="overtime">考试已超时</string>
    <string name="my_tests">我的评估</string>
    <string name="marked">已打分</string>
    <string name="cids">%1$s,%2$s</string>
    <string name="test_result">评估结果</string>
    <string name="choose_questionnaires_students">选择问卷学生</string>
    <string name="choose_questionnaires_students_q">请选择问卷学生</string>
    <string name="not_submitted_for_review">您还未提交审核资料，请先提交资料</string>
    <string name="under_review">资料审核通过才能查看</string>
    <string name="re_examination">审核不通过，请重新审核</string>
    <string name="about_us">关于我们</string>
    <string name="my_performance">我的成绩</string>
    <string name="privacy_policy">私隐政策</string>

</resources>
