<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/v_all_match_parent"
    tools:context=".ui.login.RegisterActivity">

    <include layout="@layout/include_centertitletoolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/v_all_match_parent_no"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_40dp" />


            <LinearLayout
                style="@style/h_match_parent_no"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    style="@style/text"
                    android:text="手机"/>


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/phone_et"
                    style="@style/editText_bottom_style"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingRight="15dp" />


            </LinearLayout>

            <LinearLayout
                style="@style/h_match_parent_no"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">


                <TextView
                    style="@style/text"
                    android:text="验证码"/>


                <LinearLayout
                    style="@style/ll_bottom_h"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/code_et"
                        style="@style/editText_bottom_style"
                        android:layout_marginRight="@dimen/d_5dp"
                        android:layout_weight="1"
                        android:hint="@string/input_code"
                        android:inputType="number"
                        android:maxLength="6" />

                    <Button
                        android:id="@+id/obtainCode_bt"
                        android:layout_width="93dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/code_shape"
                        android:text="@string/obtain_code"
                        android:textColor="@color/color999" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/h_match_parent_no"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text"
                    android:text="密码"/>

                <LinearLayout
                    style="@style/ll_bottom_h"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/pwd_et"
                        style="@style/editText_bottom_style"
                        android:layout_marginRight="@dimen/d_15dp"
                        android:layout_weight="1"
                        android:hint="@string/input_password_count"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        android:id="@+id/showPwd_iv"
                        style="@style/text"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/pwd_off" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/h_match_parent_no"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text"
                    android:text="密码"/>


                <LinearLayout
                    style="@style/ll_bottom_h"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp">


                    <com.xson.common.widget.DrawClickableEditText
                        android:id="@+id/pwd_again_et"
                        style="@style/editText_bottom_style"
                        android:layout_marginRight="@dimen/d_15dp"
                        android:layout_weight="1"
                        android:hint="@string/input_pwd_again"
                        android:inputType="textPassword"
                        android:maxLength="18" />

                    <ImageView
                        android:id="@+id/showPwd_again_iv"
                        style="@style/text"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/pwd_off"
                        android:visibility="gone" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_real_name"
                style="@style/h_match_parent_no"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    style="@style/text"
                    android:text="姓名"/>


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/realname_et"
                    style="@style/editText_bottom_style"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/input_real_name"
                    android:paddingRight="15dp" />

            </LinearLayout>


            <Button
                android:id="@+id/register_bt"
                style="@style/button_style"
                android:layout_marginTop="50dp"
                android:text="@string/register" />

            <com.xson.common.widget.FormatTextView
                android:id="@+id/agree_protocol_tv"
                style="@style/text12color666"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/d_30dp"
                android:layout_marginLeft="@dimen/d_15dp"
                android:layout_marginTop="@dimen/d_5dp"
                android:visibility="gone"
                app:defaultValue="@string/user_protocol"
                app:formatText="@string/agree_protocol" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
