<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">


    <LinearLayout style="@style/v_all_match_parent_no">


        <RelativeLayout
            style="@style/match_parent_has"
            android:background="@drawable/mine_bg"
            android:gravity="center_vertical">

            <com.xson.common.widget.CircleImageView
                android:id="@+id/pic_iv"
                android:layout_width="@dimen/d_80dp"
                android:layout_height="@dimen/d_80dp"
                android:layout_marginLeft="@dimen/d_20dp"
                android:src="@drawable/default_pic" />

            <TextView
                android:id="@+id/name_tv"
                style="@style/text14colorWhite"
                android:layout_marginBottom="@dimen/d_5dp"
                android:layout_marginLeft="@dimen/d_5dp"
                android:layout_marginTop="@dimen/d_20dp"
                android:layout_toRightOf="@id/pic_iv"
                android:text="@string/name" />

            <TextView
                android:id="@+id/id_tv"
                style="@style/text14colorWhite"
                android:layout_below="@+id/name_tv"
                android:layout_marginLeft="@dimen/d_5dp"
                android:layout_toRightOf="@id/pic_iv"
                android:text="id:230321321" />


        </RelativeLayout>


        <LinearLayout
            style="@style/h_match_parent"
            android:paddingBottom="@dimen/d_10dp"
            android:paddingTop="@dimen/d_10dp">

            <TextView
                android:id="@+id/class_schedule_tv"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_5dp"
                android:drawableTop="@drawable/mine_7"
                android:gravity="center"
                android:text="@string/class_schedule"
                android:textSize="@dimen/txt_12sp" />

            <TextView style="@style/line_v1dp_divider" />

            <TextView
                android:id="@+id/kao_shi_tv"
                style="@style/text_weight"
                android:drawablePadding="@dimen/d_5dp"
                android:drawableTop="@drawable/mine_8"
                android:gravity="center"
                android:text="@string/kao_shi"
                android:textSize="@dimen/txt_12sp" />

        </LinearLayout>



        <TextView
            android:id="@+id/ll_data"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_1"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:layout_marginTop="@dimen/d_10dp"
            android:text="个人资料" />



        <TextView
            android:id="@+id/ll_performance"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_performance"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="我的成绩" />


        <TextView
            android:id="@+id/ll_collect"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_2"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="我的收藏" />



        <TextView
            android:id="@+id/ll_courseware"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_teacher_6"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="@string/tutorial_courseware" />


        <TextView
            android:id="@+id/ll_checking_in"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_3"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="@string/my_checking_in" />

        <TextView
            android:id="@+id/ll_notes"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_4"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="@string/my_note" />

        <TextView
            android:id="@+id/ll_evaluate"
            style="@style/match_parent"
            android:background="@drawable/border_bottom_divider"
            android:drawableLeft="@drawable/mine_5"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="我的评价" />


        <TextView
            android:id="@+id/ll_tests_list"
            style="@style/match_parent"
            android:background="@color/white"
            android:drawableLeft="@drawable/mine_2"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:text="我的评估" />


        <TextView
            android:id="@+id/ll_setting"
            style="@style/match_parent"
            android:background="@color/white"
            android:drawableLeft="@drawable/mine_6"
            android:drawableRight="@drawable/in_right"
            android:gravity="center_vertical"
            android:padding="@dimen/d_10dp"
            android:layout_marginTop="@dimen/d_10dp"
            android:layout_marginBottom="@dimen/d_10dp"
            android:text="@string/setting" />


    </LinearLayout>

</ScrollView>
