<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/v_match_parent"
    android:layout_marginBottom="@dimen/d_5dp"
    android:layout_marginTop="@dimen/d_5dp"
    android:background="@drawable/border_bottom_top_divider"
    android:padding="@dimen/d_10dp">

    <LinearLayout
        style="@style/h_match_parent_no"
        android:layout_marginBottom="@dimen/d_10dp"
        android:gravity="center_vertical">

        <com.xson.common.widget.CircleImageView
            android:id="@+id/pic_iv"
            android:layout_width="@dimen/d_40dp"
            android:layout_height="@dimen/d_40dp" />

        <TextView
            android:id="@+id/realname_tv"
            style="@style/text"
            android:layout_marginLeft="@dimen/d_5dp" />

    </LinearLayout>

    <TextView style="@style/line_H1dp_divider" />

    <TextView
        android:id="@+id/kec_tv"
        style="@style/text12color666"
        android:layout_marginLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:drawableLeft="@drawable/class_name"
        android:drawablePadding="@dimen/d_5dp" />

    <TextView
        android:id="@+id/time_tv"
        style="@style/text12color666"
        android:layout_marginLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_5dp"
        android:drawableLeft="@drawable/class_time"
        android:drawablePadding="@dimen/d_5dp" />

    <TextView
        android:id="@+id/roomname_tv"
        style="@style/text12color666"
        android:layout_marginBottom="@dimen/d_10dp"
        android:layout_marginLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_5dp"
        android:drawableLeft="@drawable/class_position"
        android:drawablePadding="@dimen/d_5dp" />

    <TextView style="@style/line_H1dp_divider" />

    <TextView
        style="@style/text12colorBlack"
        android:layout_marginLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:text="@string/remark" />

    <TextView
        android:id="@+id/remark_tv"
        style="@style/text12colorBlack"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/d_10dp"
        android:layout_marginTop="@dimen/d_10dp"
        android:background="@drawable/class_details" />


    <LinearLayout
        style="@style/h_match_parent_no"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/d_10dp">

        <TextView
            android:id="@+id/class_hour_evaluate_tv"
            style="@style/text12color1593f0"
            android:layout_marginLeft="@dimen/d_5dp"
            android:layout_marginRight="@dimen/d_5dp"
            android:background="@drawable/examination_button_bg"
            android:text="@string/class_hour_evaluate" />

        <TextView
            android:id="@+id/teacher_evaluate_tv"
            style="@style/text12color1593f0"
            android:layout_marginLeft="@dimen/d_5dp"
            android:layout_marginRight="@dimen/d_5dp"
            android:background="@drawable/examination_button_bg"
            android:text="@string/teacher_evaluate" />

        <TextView
            android:id="@+id/schoolmate_evaluate_tv"
            style="@style/text12color1593f0"
            android:layout_marginLeft="@dimen/d_5dp"
            android:layout_marginRight="@dimen/d_5dp"
            android:background="@drawable/examination_button_bg"
            android:text="@string/schoolmate_evaluate" />

    </LinearLayout>

</LinearLayout>
